# dem-storage

./: .gitignore  package-lock.json  package.json
headless-node/: Cargo.toml
headless-node/crypto/src/: lib.rs
headless-node/node/: Cargo.toml
headless-node/node/src/: main.rs
headless-node/p2p/: Cargo.toml
headless-node/p2p/src/: client.rs  consts.rs  lib.rs  node.rs  scheduler.rs  server.rs  types.rs
headless-node/p2p/src/client/: connection.rs  service.rs
headless-node/p2p/src/server/: handler.rs  service.rs
headless-node/proto/: Cargo.toml  build.bak
headless-node/proto/src/: main_server_operations.rs
proto/: main-server-operations.proto
server/: Dockerfile  HELP.md  build.gradle.kts  run.sh
server/_endpoint_test/: main-server-operations.http  member-operations.grpc.http  member.web.http  node-operations.grpc.http  node.web.http
server/_local/: docker-compose.yml
server/_local/init_sql/: init.sql
server/src/main/kotlin/com/demstorage/: DatabaseConfiguration.kt  DatabaseInitConfiguration.kt  DemStorageException.kt  DemstorageApplication.kt
server/src/main/kotlin/com/demstorage/controller/: MemberRestController.kt  NodeRestController.kt  WebConfigurations.kt
server/src/main/kotlin/com/demstorage/grpc/: GrpcMemberOperations.kt  GrpcNodeService.kt  MainServerService.kt
server/src/main/kotlin/com/demstorage/member/: MemberConfiguration.kt  MemberExceptions.kt
server/src/main/kotlin/com/demstorage/member/domain/: Member.kt
server/src/main/kotlin/com/demstorage/member/repository/: MemberEntity.kt  MemberRepository.kt
server/src/main/kotlin/com/demstorage/member/service/: MemberOperations.kt
server/src/main/kotlin/com/demstorage/node/: NodeConfiguration.kt  NodeExceptions.kt
server/src/main/kotlin/com/demstorage/node/domain/: Node.kt
server/src/main/kotlin/com/demstorage/node/repository/: NodeEntity.kt  NodeRepository.kt
server/src/main/kotlin/com/demstorage/node/service/: AvailableNodeLoader.kt  NodeOperations.kt
server/src/main/kotlin/proto/: main-server-operations.proto  member-operations.proto  node-operations.proto
server/src/main/resources/: application.yaml
src/: App.tsx  fetchers.ts  hooks.ts  main.tsx  mui_theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crypto/: Cargo.toml
src-tauri/crypto/src/: error.rs  fs.rs  lib.rs
src-tauri/p2p/: Cargo.toml
src-tauri/p2p/src/: client.rs  consts.rs  error.rs  lib.rs  node.rs  scheduler.rs  server.rs  types.rs
src-tauri/p2p/src/client/: command_service.rs  connection.rs  dummy_cert.rs  fs.rs  handler.rs  service.rs
src-tauri/p2p/src/server/: connection.rs  handler.rs  service.rs
src-tauri/proto/: Cargo.toml
src-tauri/proto/src/: lib.rs  main_server_operations.rs
src-tauri/src/: main.rs  prepare.rs  types.rs
src/components/: AddFileBtn.tsx  AutoLoginSwitch.tsx  CompactList.tsx  FileBlock.tsx  FileFormatIcon.tsx  FileListItem.tsx  FileTransferProgressBar.tsx  FileUploadBtn.tsx  ListOptionsBox.tsx  MyFileList.tsx  Notificator.tsx  SideBar.tsx  UploadFileListBtn.tsx  UploadFileListItem.tsx  UserInfoBox.tsx  styles.tsx
src/layouts/: MainLayout.tsx  MemberLayout.tsx
src/redux/: store.ts  types.ts
src/redux/slices/: downloadSlice.ts  fileListOptionSlice.ts  uploadSlice.ts  userSlice.ts
src/routes/: Login.tsx  MyFiles.tsx  NewMember.tsx  Settings.tsx  Signup.tsx
src/test/: UploadTest.tsx  mocks.ts
