[workspace]
members = [
    "p2p",
    "crypto"
]

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[package]
name = "dem-storage"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p2p = { path = "p2p" }
tokio = { workspace = true }
async-channel = "2.2.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
