[workspace]
members = [
    "crypto",
    "p2p"
]

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.202", features = ["derive"] }

[package]
name = "dem-storage"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
async-channel = "2.2.1"
eyre = "0.6.12"
once_cell = "1.19.0"
p2p = { path = "p2p" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "api-all"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
