[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = "1.6.0"
crossbeam-channel = "0.5.13"
crypto = { path = "../crypto" }
itertools = "0.13.0"
parking_lot = "0.12.2"
quinn = { version = "0.11.0", features = ["rustls", "ring"] }
rcgen = "0.13"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
