[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.2.1"
bytes = "1.6.0"
crypto = { path = "../crypto" }
eyre = "0.6.12"
moka = { version = "0.12.7", features = ["future"] }
once_cell = "1.19.0"
quinn = { version = "0.10.2", features = ["rustls"] }
rcgen = "0.12.1"
rustls = { version = "0.21.0", features = ["quic", "dangerous_configuration"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
