[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = { version = "0.11.0", features = ["rustls", "ring"] }
rcgen = "0.13"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12.2"
serde = { workspace = true }
bincode = "1.3.3"
crypto = { path = "../crypto" }
bytes = "1.6.0"
crossbeam-channel = "0.5.13"
itertools = "0.13.0"